--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/private/subhook"]
 	path = src/private/subhook
-	url = https://github.com/Zeex/subhook.git
+	url = https://github.com/ba0f3/subhook.git
